--- a/service-design.html
+++ b/service-design.html
@@ -146,20 +146,17 @@
      <div class="row">
       <div class="col-lg-6 sm-mt-30">
         <div class="section-title mb-20">
-            <h6>Mostrá tu marca en internet de la mejor manera</h6>
-            <h2>Diseño Web</h2>
-            <p>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
-            <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</p>
+            <h6>Destaca tu marca con estilo e identidad</h6>
+            <h2>Diseño Gráfico</h2>
+            <p>Generamos interés en tus productos o servicios con una buena presentación.
+            </p>
           </div>
-          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
-          <a class="button mt-20" href="#"> Leer más</a>
+          <p>Diseñamos en distintos formatos para construir los mensajes de tu marca o negocio y su presencia en medios digitales.</p>
+          <p>Nuestros diseños son innovadores y generan impacto.</p>
       </div>
-      <div class="col-lg-6">
-         <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
-        </div>
-      </div>
+      <div class="col-lg-6 sm-mt-50">
+        <img class="img-fluid mx-auto" src="images/design/design.jpg" alt="">
+     </div>
      </div>
   </div>
 </section>
