--- a/service-web.html
+++ b/service-web.html
@@ -152,7 +152,7 @@
       <div class="col-md-12">
         <div class="contact-box">
           <div class="col-12 text-center">
-            <h3 class="text-dark title">Mostrá tu marca en internet de la mejor manera</h3>
+            <h3 class="text-secondary title">Mostrá tu marca en internet de la mejor manera</h3>
             <div class="col-8 offset-2" style="border-bottom: 2px solid black;"></div>
           </div>
         </div>
@@ -340,8 +340,8 @@
             <div class="portfolio-item">
              <img src="images/portfolio/ditrabajo.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-white"> <a href="portfolio-single-01.html"> diTrabajo </a> </h4>
-                  <span class="text-white"> Sitio web dinámico</span> 
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> diTrabajo </a> </h4>
+                  <span class="text-dark"> Sitio web dinámico</span> 
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/ditrabajo.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
@@ -350,8 +350,8 @@
          <div class="portfolio-item">
              <img src="images/portfolio/colombres-garmendia.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-white"> <a href="portfolio-single-01.html"> Colombres Garmendia & Asociados </a> </h4>
-                  <span class="text-white"> Sitio web dinámico</span> 
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> Colombres Garmendia & Asociados </a> </h4>
+                  <span class="text-dark"> Sitio web dinámico</span> 
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/colombres-garmendia.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
@@ -360,8 +360,8 @@
          <div class="portfolio-item">
              <img src="images/portfolio/exelsus.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-white"> <a href="portfolio-single-01.html"> Clínica Exelsus </a> </h4>
-                  <span class="text-white"> Sitio web estático</span>
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> Clínica Exelsus </a> </h4>
+                  <span class="text-dark"> Sitio web estático</span>
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/exelsus.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
@@ -370,8 +370,8 @@
             <div class="portfolio-item">
              <img src="images/portfolio/groov.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-white"> <a href="portfolio-single-01.html"> GROOV EPISODES </a> </h4>
-                  <span class="text-white"> Sitio web estático</span>
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> GROOV EPISODES </a> </h4>
+                  <span class="text-dark"> Sitio web estático</span>
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/groov.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
@@ -380,8 +380,8 @@
          <div class="portfolio-item">
              <img src="images/portfolio/clic.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-white"> <a href="portfolio-single-01.html"> Clic Marketing Digital </a> </h4>
-                  <span class="text-white"> Sitio web estático</span>
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> Clic Marketing Digital </a> </h4>
+                  <span class="text-dark"> Sitio web estático</span>
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/clic.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
@@ -390,8 +390,8 @@
          <div class="portfolio-item">
              <img src="images/portfolio/coke.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-white"> <a href="portfolio-single-01.html"> < / Coke > </a> </h4>
-                  <span class="text-white"> Sitio web estático</span> 
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> < / Coke > </a> </h4>
+                  <span class="text-dark"> Sitio web estático</span> 
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/coke.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
@@ -406,8 +406,8 @@
     <div class="row">
      <div class="col-lg-12 col-md-12">
         <div class="action-box-text">
-         <h3 class="text-dark"> Consultanos por el desarrollo de tu propia página,</h3>
-         <p class="text-dark">estamos para potenciar tus tus ideas y llevarlas más allá.</p>
+         <h3 class="text-dark"> Consultanos por el desarrollo de tu propia página</h3>
+         <p class="text-dark">estamos para potenciar tus ideas y llevarlas más allá</p>
          </div>
          <div class="action-box-button">
         <a class="button button-border black" href="#">
