--- a/about.html
+++ b/about.html
@@ -184,6 +184,90 @@
   </div>
 </section>
 
+<section class="gray-bg page-section-ptb">
+  <div class="container">
+     
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <span class="h4 text-gray">Conoce a nuestros integrantes</span>
+            <h1>Nuestro equipo</h1>
+          </div>
+       </div>
+    </div>
+     <div class="row">
+        <div class="col-lg-3 col-sm-6 sm-mb-30">
+         <div class="team team-round full-border white-bg">
+            <div class="team-photo">
+              <img class="img-fluid mx-auto" src="images/team/01.jpg" alt="">
+            </div>
+            <div class="team-description">
+              <div class="team-info">
+                   <h5><a href="team-single.html"> Coke Colombres</a></h5>
+                   <span>CEO</span>
+              </div>
+              <div class="team-contact">
+                <span class="call"> +(704) 279-1249</span>
+                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
+              </div>
+             </div>
+         </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 sm-mb-30">
+         <div class="team team-round full-border white-bg">
+            <div class="team-photo">
+              <img class="img-fluid mx-auto" src="images/team/02.jpg" alt="">
+            </div>
+            <div class="team-description">
+              <div class="team-info">
+                   <h5><a href="team-single.html"> Nicolas Ottaviani</a></h5>
+                   <span>Design</span>
+              </div>
+              <div class="team-contact">
+                <span class="call"> +(704) 279-1249</span>
+                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
+              </div>
+             </div>
+         </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 xs-mb-30">
+         <div class="team team-round full-border white-bg">
+            <div class="team-photo">
+              <img class="img-fluid mx-auto" src="images/team/06.jpg" alt="">
+            </div>
+            <div class="team-description">
+              <div class="team-info">
+                   <h5><a href="team-single.html"> Chueco Darterio</a></h5>
+                   <span>Community</span>
+              </div>
+              <div class="team-contact">
+                <span class="call"> +(704) 279-1249</span>
+                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
+              </div>
+             </div>
+         </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+         <div class="team team-round full-border white-bg">
+            <div class="team-photo">
+              <img class="img-fluid mx-auto" src="images/team/04.jpg" alt="">
+            </div>
+            <div class="team-description">
+              <div class="team-info">
+                   <h5><a href="team-single.html"> Adrian Tula</a></h5>
+                   <span>Graphic Designer</span>
+              </div>
+              <div class="team-contact">
+                <span class="call"> +(704) 279-1249</span>
+                <span class="email"> <a href="#"> <i class="fa fa-envelope-o"></i> </a> </span>
+              </div>
+             </div>
+         </div>
+        </div>
+     </div>
+  </div>
+</section>
+
 <!-- <section class="page-section-ptb">
   <div class="container">
     <div class="row justify-content-center">
