--- a/service-web.html
+++ b/service-web.html
@@ -255,26 +255,26 @@
    </div>
      <div class="row">
       <div class="col-lg-12 col-md-12">
-      <div class="testimonial-center">
-        <div class="owl-carousel bottom-nav" data-nav-arrow="true" data-items="1" data-lg-items="1" data-md-items="1" data-sm-items="1" data-xs-items="1" data-xx-items="1">
+      <div class="p-3">
+        <div class="owl-carousel " data-nav-arrow="true" data-items="1" data-lg-items="1" data-md-items="1" data-sm-items="1" data-xs-items="1" data-xx-items="1">
           <div class="item">
-            <div class="testimonial text-white clean">
-              <div class="author-info"> <strong>Sitio web estático</strong> </div>
-              <div class="testimonial-info"> Se tratan de las páginas webs que solo muestran información permanente tratando de crear un atractivo y enseñando otra salida, ya sea a redes sociales o dar a conocer comercios. <br>
+            <div class="text text-white clean">
+              <div class=""> <strong>Sitio web estático</strong> </div>
+              <div class=""> Se tratan de las páginas webs que solo muestran información permanente tratando de crear un atractivo y enseñando otra salida, ya sea a redes sociales o dar a conocer comercios. <br>
               Estas webs no tienen ningún tipo de base de datos, aplicativos especiales.</div>            
             </div>
           </div>
         <div class="item">
-            <div class="testimonial text-white clean">
-              <div class="author-info"> <strong>Sitio web dinámico</strong> </div>
-              <div class="testimonial-info">Son las páginas más usadas de la actualidad con funciones avanzadas, importantes e incluso cierre de ventas con sistemas totalmente automatizados. <br>
+            <div class="text text-white clean">
+              <div class=""> <strong>Sitio web dinámico</strong> </div>
+              <div class="">Son las páginas más usadas de la actualidad con funciones avanzadas, importantes e incluso cierre de ventas con sistemas totalmente automatizados. <br>
               Básicamente puedes crear una herramienta por la cual las personas visiten tu página web o puedes tener incluso una tienda que se retroalimenta.</div>            
             </div>
           </div>
         <div class="item">
-            <div class="testimonial text-white clean">
-              <div class="author-info"> <strong>E commerce</strong> </div>
-              <div class="testimonial-info"> Básicamente se trata de crear una página web que incluye una tienda donde puedas ver el producto, conocer las tallas, saber la disponibilidad, conocer hacia qué país lo envían e incluso pagar directamente en la plataforma. Lo que hace que los procesos de venta se optimicen y se garantice perfectamente la compra de un producto o servicio.</div>            
+            <div class="text text-white clean">
+              <div class=""> <strong>E commerce</strong> </div>
+              <div class=""> Básicamente se trata de crear una página web que incluye una tienda donde puedas ver el producto, conocer las tallas, saber la disponibilidad, conocer hacia qué país lo envían e incluso pagar directamente en la plataforma. Lo que hace que los procesos de venta se optimicen y se garantice perfectamente la compra de un producto o servicio.</div>            
             </div>
           </div>
           </div>
@@ -327,14 +327,15 @@
 <section class="white-bg page-section-ptb">
   <div class="container-fluid">
     <div class="row">
-     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-      <div class="row justify-content-center col-12">
-        <div class="col-lg-8">
-          <div class="section-title text-center">
-            <h2 class="title">Algunos de <span class="theme-bg">Nuestros Proyectos </span> </h2>
+      <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <span class="h4 text-gray">Lo que venimos haciendo</span>
+            <h1>Nuestros proyectos</h1>
           </div>
-        </div>
-      </div>
+       </div>
+    </div>
+    <div class="row">
+     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
       <div class="isotope columns-3 popup-gallery">
         <div class="grid-item photography branding">
             <div class="portfolio-item">
@@ -511,7 +512,6 @@
 
 <!-- custom -->
 <script src="js/custom.js"></script>
-
 
 
 </body>
