--- a/service-web.html
+++ b/service-web.html
@@ -66,7 +66,6 @@
  header -->
 
 <header id="header" class="header default">
-
   <div class="menu">
     <!-- menu start -->
      <nav id="menu" class="mega-menu">
@@ -78,7 +77,7 @@
               <!-- menu logo -->
               <ul class="menu-logo">
                 <li>
-                  <a href="index.html"><img id="logo_img" src="images/logo-03.png" alt="logo"> </a>
+                  <a href="index.html"><img id="logo_img" src="images/logo-06.png" alt="logo"> </a>
                 </li>
               </ul>
               <!-- menu links -->
@@ -86,23 +85,26 @@
                 <ul class="menu-links">
                   <li><a href="index.html">Inicio </a>
                   </li>
-                  <li><a class="btn disabled">Noticias </a>
+                  <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
+                       <!-- drop down multilevel  -->
+                    <ul class="drop-down-multilevel">
+                      <li><a href="service-web.html"><i class="fa fa-code"></i> Desarrollo & Diseño Web </a></li>
+                      <li><a href="service-design.html"><i class="fa fa-paint-brush"></i>Diseño Gráfico </a></li>
+                      <li><a href="service-marketing.html"><i class="fa fa-search"></i> Marketing Digital </a></li>
+                      <li><a href="service-content.html"><i class="fa fa-play-circle"></i> Estrategias de Contenidos </a></li>
+                      <li class="divider"></li>
+                      <li><a href="service-advisory.html"><i class="fa fa-handshake-o"></i> Asesoría  </a></li>
+                      <li><a href="service-management.html"><i class="fa fa-list-ol"></i> Gestion de proyectos  </a></li>
+                      <li class="divider"></li>
+                    </ul>
                   </li>
-                  <li><a class="active" href="about.html">Nosotros </a>
+                  <li><a href="about.html">Nosotros </a>
+                  </li>
+                  <li><a href="news.html">Noticias </a>
                   </li>
                   <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
                   </li>
-                  <!-- <li><a href="javascript:void(0)">Trabajo a distancia <i class="fa fa-angle-down fa-indicator"></i></a>
-                      <div class="drop-down">
-                        <ul>
-                          <li><a href="contact-05.html">Herramientas recomendadas </a></li>
-                          <li><a href="faqs-01.html">Algunos consejos  </a></li>
-                          <li><a href="faqs-02.html">Entorno digital </a></li>
-                        </ul>
-                      </div>
-                  </li> -->
-                  <li><a href="blog.html">Blog </a>
-                  </li>
+                  
                 </ul>
                 <div class="search-cart">
                   <div class="search">
@@ -152,7 +154,7 @@
       <div class="col-md-12">
         <div class="contact-box">
           <div class="col-12 text-center">
-            <h3 class="text-secondary title">Mostrá tu marca en internet de la mejor manera</h3>
+            <h3 class="text-dark title">Mostrá tu marca en internet de la mejor manera</h3>
             <div class="col-8 offset-2" style="border-bottom: 2px solid black;"></div>
           </div>
         </div>
@@ -168,9 +170,9 @@
         <div class="play-video-section text-center mtn-10" style="">
            <div class="content">
              <h2 class="text-dark mb-20">Diseño Web</h2>
-              <h4 class="text-dark mb-50"><i>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
+              <p class="text-dark mb-50">Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
             <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</i></h4>
+            Webs que están a la altura de los estándares de calidad e innovación internacionales.</p>
               <img class="img-fluid mx-auto" src="images/objects/mac-book.png" alt="">
            </div>
          </div>
