--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                   <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
                        <!-- drop down multilevel  -->
                     <ul class="drop-down-multilevel">
-                      <li><a href="service-web.html"><i class="fa fa-list-ul"></i> Desarrollo & Diseño Web </a></li>
-                      <li><a href="service-design.html"><i class="fa fa-list-ul"></i>Diseño Gráfico </a></li>
-                      <li><a href="service-marketing.html"><i class="fa fa-list-ul"></i> Marketing Digital </a></li>
-                      <li><a href="service-content.html"><i class="fa fa-list-ul"></i> Estrategias de Contenidos </a></li>
+                      <li><a href="service-web.html"><i class="fa fa-code"></i> Desarrollo & Diseño Web </a></li>
+                      <li><a href="service-design.html"><i class="fa fa-paint-brush"></i>Diseño Gráfico </a></li>
+                      <li><a href="service-marketing.html"><i class="fa fa-search"></i> Marketing Digital </a></li>
+                      <li><a href="service-content.html"><i class="fa fa-play-circle"></i> Estrategias de Contenidos </a></li>
                       <li class="divider"></li>
-                      <li><a href="service-advisory.html"><i class="fa fa-list-ul"></i> Asesoría  </a></li>
-                      <li><a href="service-management.html"><i class="fa fa-list-ul"></i> Gestion de proyectos  </a></li>
+                      <li><a href="service-advisory.html"><i class="fa fa-handshake-o"></i> Asesoría  </a></li>
+                      <li><a href="service-management.html"><i class="fa fa-list-ol"></i> Gestion de proyectos  </a></li>
                       <li class="divider"></li>
                     </ul>
                   </li>
