--- a/service-web.html
+++ b/service-web.html
@@ -146,20 +146,20 @@
 
 <section id="raindrops" class="raindrops" style="height: 50px; margin-top: -3%;"></section>
 
-<section class="contact-box contact-box-top theme-bg">
+<section class="page-section">
   <div class="container">
-    <div class="row pb-40">
-      <div class="col-md-12">
-        <div class="contact-box">
-          <div class="col-12 text-center">
-            <h3 class="text-secondary title">Mostrá tu marca en internet de la mejor manera</h3>
-            <div class="col-8 offset-2" style="border-bottom: 2px solid black;"></div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <span class="h4 text-gray">Sitios web a medida</span>
+            <h1>Mostrá tu marca de la mejor manera</h1>
           </div>
-        </div>
-      </div>
+       </div>
     </div>
+    
   </div>
 </section>
+
 
 <section class="page-section-pt bg-overlay-theme-900 parallax" style="background-image: url(images/bg/17.jpg);">
  <div class="container">
@@ -167,10 +167,7 @@
        <div class="col-md-9">
         <div class="play-video-section text-center mtn-10" style="">
            <div class="content">
-             <h2 class="text-dark mb-20">Diseño Web</h2>
-              <h4 class="text-dark mb-50"><i>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
-            <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</i></h4>
+              <h4 class="text-dark mb-50">La puerta principal de tu empresa en internet, es su página web</h4>
               <img class="img-fluid mx-auto" src="images/objects/mac-book.png" alt="">
            </div>
          </div>
@@ -181,16 +178,17 @@
 
 <section class="marketing-service gray-bg page-section-ptb">
   <div class="container">
-    <div class="row justify-content-center col-12">
-      <div class="col-lg-8">
-        <div class="section-title text-center">
-            <h2 class="title">Algunos <span class="theme-bg"> Beneficios </span> </h2>
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <span class="h4 text-gray">Aprovechá la presencia web</span>
+            <h1>Algunos de sus beneficios</h1>
           </div>
-      </div>
+       </div>
     </div>
     <div class="d-flex my-5">
       <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-        <h1 class="text-black">01<span class="text-black">.</span></h1>
+        <h1 class="text-black"><span class="text-black">.</span></h1>
         <p class="text-gray"><strong>Las páginas web son la mejor manera de mostrar una marca en internet.</strong></p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
