--- a/service-web.html
+++ b/service-web.html
@@ -200,7 +200,12 @@
         <p class="text-gray"><strong>Es tu presencia en el mundo digital, un medio de comunicación directo con cualquier potencial cliente las 24 horas del día, los 365 días del año.</strong></p>
       </div>
     </div>
-    <div class="row no-gutters">
+   
+</section>
+
+<section class="page-section-ptb">
+  <div class="container">
+     <div class="row no-gutters">
       <div class="col-lg-4 col-md-6">
        <div class="feature-text left-icon">
          <div class="position-relative clearfix">
@@ -240,6 +245,7 @@
         </div>
       </div>
      </div>
+  </div>
 </section>
 
 <section class="page-section-ptb pos-r bg-overlay-black-70 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/30.png);">
