--- a/faqs.html
+++ b/faqs.html
@@ -430,80 +430,79 @@ action box- -->
 <footer class="footer page-section-pt black-bg">
  <div class="container">
   <div class="row">
-      <div class="col-lg-2 col-sm-6 sm-mb-30">
+    <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
+      <div class="footer-logo">
+        <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
+      </div>
+      <p class="pb-10">Noticias, opiniones y consejos sobre los medios digitales y su uso</p>
+      <div class="social-icons social-border rounded color-hover clearfix"><ul>
+        <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        <li class="social-youtube"><a href="#"><i class="fa fa-youtube"></i></a></li>
+        <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li class="social-skype"><a href="#"><i class="fa fa-skype"></i></a></li>
+      </ul></div>
+    </div>
+    <div class="col-lg-2 col-md-3 col-sm-6 sm-mb-30">
       <div class="footer-useful-link footer-hedding">
-        <h6 class="text-white mb-30 mt-10 text-uppercase">Navigation</h6>
+        <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Service</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="about.html">Servicios</a></li>
+          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="#">Oportunidades</a></li> -->
         </ul>
       </div>
     </div>
-    <div class="col-lg-2 col-sm-6 sm-mb-30">
+    <div class="col-lg-2 col-md-3 col-sm-6 sm-mb-30">
       <div class="footer-useful-link footer-hedding">
-        <h6 class="text-white mb-30 mt-10 text-uppercase">Useful Link</h6>
+        <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
         <ul>
-          <li><a href="#">Create Account</a></li>
-          <li><a href="#">Company Philosophy</a></li>
-          <li><a href="#">Corporate Culture</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Client Management</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="about.html">Servicios</a></li>
+          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="#">Oportunidades</a></li> -->
         </ul>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-6 xs-mb-30">
-    <h6 class="text-white mb-30 mt-10 text-uppercase">Contact Us</h6>
-    <ul class="addresss-info">
-        <li><i class="fa fa-map-marker"></i> <p>Address: 17504 Carlton Cuevas Rd, Gulfport, MS, 39503</p> </li>
-        <li><i class="fa fa-phone"></i> <a href="tel:7042791249"> <span>+(704) 279-1249 </span> </a> </li>
-        <li><i class="fa fa-envelope-o"></i>Email: letstalk@webster.com</li>
+    <div class="col-lg-4 col-md-6 col-sm-6">
+      <iframe style="border-radius: 5px;" class="map_footer" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2342.0403000705396!2d-65.2063627905762!3d-26.83561740054946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3d6c418e7b06dd1!2zTGEgY29tcGHDscOtYSBkaWdpdGFs!5e0!3m2!1ses-419!2sar!4v1580314220077!5m2!1ses-419!2sar" width="400" height="200" frameborder="0" allowfullscreen=""></iframe>
+      <!-- <h6 class="text-white mb-30 mt-10 text-uppercase">Contacto</h6>
+      <ul class="addresss-info">
+        <li><i class="fa fa-map-marker"></i> <p>9 de Julio 371, Tucumán, Argentina <br> CP: 4000</p> </li>
+        <li><i class="fa fa-phone"></i> <a href="tel:7042791249"> <span>+54 9 381 232 4554 (whatsapp)</span> </a> </li>
+        <li><i class="fa fa-envelope-o"></i>contacto@lacompaniadigital.com</li>
       </ul>
+      <div class="social-icons color-hover">
+        <ul>
+          <li class="social-facebook"><a href="https://www.facebook.com/lacompaniadigital/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li class="social-instagram"><a href="https://www.instagram.com/lacompania.digital/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li class="social-twitter"><a href="https://twitter.com/CompaniaDigital" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li class="social-linkedin"><a href="https://www.linkedin.com/company/la-compañía-digital/" target="_blank"><i class="fa fa-linkedin"></i> </a></li>
+          <li class="social-youtube"><a href="https://www.youtube.com/channel/UCd4Rh7AD4lnpr1AQ5XmOucg" target="_blank"><i class="fa fa-youtube"></i> </a></li>
+        </ul>
+      </div> -->
     </div>
-    <div class="col-lg-4 col-sm-6">
-      <h6 class="text-white mb-30 mt-10 text-uppercase">Subscribe to Our Newsletter</h6>
-        <p class="mb-30">Sign Up to our Newsletter to get the latest news and offers.</p>
-         <div class="footer-Newsletter">
-          <div id="mc_embed_signup_scroll">
-            <form action="php/mailchimp-action.php" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">
-             <div id="msg"> </div>
-              <div id="mc_embed_signup_scroll_2">
-                <input id="mce-EMAIL" class="form-control" type="text" placeholder="Email address" name="email1" value="">
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                    <input type="text" name="b_b7ef45306f8b17781aa5ae58a_6b09f39a55" tabindex="-1" value="">
-                </div>
-                <div class="clear">
-                  <button type="submit" name="submitbtn" id="mc-embedded-subscribe" class="button button-border mt-20 form-button">  Get notified </button>
-                </div>
-              </form>
-            </div>
-            </div>
-         </div>
-       </div>
-      <div class="footer-widget mt-20">
-        <div class="row">
-          <div class="col-lg-6 col-md-6">
-           <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#"> Webster </a> All Rights Reserved </p>
-          </div>
-          <div class="col-lg-6 col-md-6 text-left text-md-right">
-            <div class="social-icons color-hover mt-10">
-             <ul>
-              <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i> </a></li>
-              <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i> </a></li>
-             </ul>
-           </div>
-          </div>
-        </div>
+  </div>
+  <div class="footer-widget mt-20">
+    <div class="row">
+      <div class="col-lg-6 col-md-6">
+        <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#"> LA COMPAÑIA DIGITAL </a> All Rights Reserved </p>
       </div>
+      <div class="col-lg-6 col-md-6 ">
+        <div class="footer-social mt-10">
+          <ul class="text-left text-md-right">
+             <li class="list-inline-item"><a href="#">Terms &amp; Conditions </a> &nbsp;&nbsp;&nbsp;|</li>
+             <li class="list-inline-item"><a href="#">API Use Policy </a> &nbsp;&nbsp;&nbsp;|</li>
+             <li class="list-inline-item"><a href="#">Privacy Policy </a> </li>
+          </ul>
+          </div>
+      </div>
+    </div>
+  </div>
   </div>
 </footer>
 
