--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
       </div>
       <p class="pb-10">Noticias, opiniones y consejos sobre los medios digitales y su uso</p>
-      <div class="social-icons color rounded clearfix"><ul>
+      <div class="social-icons social-border rounded color-hover clearfix"><ul>
         <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
         <li class="social-youtube"><a href="#"><i class="fa fa-youtube"></i></a></li>
         <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
