content desing gestion marketing

--- a/service-management.html
+++ b/service-management.html
@@ -130,63 +130,25 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/6.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <div class="text-center">
-          <h3 class="text-white">“Si tu negocio no está en internet, no existe”</h3>
-          <p class="h4 text-muted">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar</p>
-        </div>
-     </div>
-  </div>
- </div>
-</section>
-
-<section class="page-section-ptb">
-  <div class="container">
-     <div class="row">
-      <div class="col-lg-6 sm-mt-30">
-        <div class="section-title mb-20">
-            <h6>Mostrá tu marca en internet de la mejor manera</h6>
-            <h2>Diseño Web</h2>
-            <p>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
-            <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</p>
-          </div>
-          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
-          <a class="button mt-20" href="#"> Leer más</a>
-      </div>
-      <div class="col-lg-6">
-         <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
-        </div>
-      </div>
-     </div>
-  </div>
-</section>
-
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
+<section class="slider-parallax business-banner-06 bg-overlay-black-80 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/29.png);">
+  <div class="slider-content-middle">
    <div class="container">
-       <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">01<span class="text-black">.</span></h1>
-              <h3 class="text-black">Tenemos tecnología</h3>
-              <p class="text-gray">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
+     <div class="row">
+        <div class="col-12">
+         <div class="slider-content">
+          <div class="row">
+            <div class="col-lg-10">
+                <h1 class="text-white text-uppercase">“Si tu negocio no está en internet, no existe”</h1>
+                <p class="text-white">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar.</p>
+            </div>
+          </div>
          </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">02<span class="text-black">.</span></h1>
-              <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4">
-              <h1 class="text-white">03<span class="text-black">.</span></h1>
-              <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
-         </div>
-      </div>
+        </div>
+     </div>
+   </div>
   </div>
 </section>
+
 
 
 <!--=================================
