--- a/service-web.html
+++ b/service-web.html
@@ -133,17 +133,23 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/30.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <div class="text-center">
-          <h3 class="text-white">“Si tu negocio no está en internet, no existe”</h3>
-          <p class="h4 text-muted">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar</p>
+<section class="slider-parallax business-banner-06 bg-overlay-black-70 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/29.png);">
+  <div class="slider-content-middle">
+   <div class="container">
+     <div class="row">
+        <div class="col-12">
+         <div class="slider-content">
+          <div class="row">
+            <div class="col-lg-10">
+                <h1 class="text-white text-uppercase">“Si tu negocio no está en internet, no existe”</h1>
+                <p class="text-white">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar.</p>
+            </div>
+          </div>
+         </div>
         </div>
      </div>
+   </div>
   </div>
- </div>
 </section>
 
 <section id="raindrops" class="raindrops" style="height: 50px; margin-top: -3%;"></section>
@@ -180,29 +186,29 @@
 
 <section class="marketing-service gray-bg page-section-ptb">
   <div class="container">
-    <div class="row">
+    <div class="row">    
       <div class="col-lg-12 col-md-12">
-         <div class="section-title text-center">
-            <span class="h4 text-gray">Aprovechá la presencia web</span>
-            <h1>Algunos de sus beneficios</h1>
-          </div>
-       </div>
+        <div class="section-title text-center">
+          <span class="h4 text-gray">Aprovechá la presencia web</span>
+          <h1>Algunos de sus beneficios</h1>
+        </div>
+      </div>
+      <div class="d-flex my-5">
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+          <h1 class="text-black">01<span class="text-black">.</span></h1>
+          <p class="text-gray"><strong>Las páginas web son la mejor manera de mostrar una marca en internet.</strong></p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+          <h1 class="text-black">02<span class="text-black">.</span></h1>
+          <p class="text-gray"><strong>Te permiten ser parte de los resultados de búsqueda en google para alcanzar nuevos clientes y potenciar tu negocio.</strong></p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4">
+          <h1 class="text-black">03<span class="text-black">.</span></h1>
+          <p class="text-gray"><strong>Es tu presencia en el mundo digital, un medio de comunicación directo con cualquier potencial cliente las 24 horas del día, los 365 días del año.</strong></p>
+        </div>
+      </div>
     </div>
-    <div class="d-flex my-5">
-      <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-        <h1 class="text-black"><span class="text-black">.</span></h1>
-        <p class="text-gray"><strong>Las páginas web son la mejor manera de mostrar una marca en internet.</strong></p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-        <h1 class="text-black">02<span class="text-black">.</span></h1>
-        <p class="text-gray"><strong>Te permiten ser parte de los resultados de búsqueda en google para alcanzar nuevos clientes y potenciar tu negocio.</strong></p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <h1 class="text-black">03<span class="text-black">.</span></h1>
-        <p class="text-gray"><strong>Es tu presencia en el mundo digital, un medio de comunicación directo con cualquier potencial cliente las 24 horas del día, los 365 días del año.</strong></p>
-      </div>
-    </div>
-   
+  </div>
 </section>
 
 <section class="page-section-ptb">
@@ -259,27 +265,27 @@
           </div>
        </div>
    </div>
-     <div class="row">
+     <div class="row text-center">
       <div class="col-lg-12 col-md-12">
       <div class="p-3">
         <div class="owl-carousel " data-nav-arrow="true" data-items="1" data-lg-items="1" data-md-items="1" data-sm-items="1" data-xs-items="1" data-xx-items="1">
-          <div class="item">
+          <div class="item col-10 offset-1">
             <div class="text text-white clean">
-              <div class=""> <strong>Sitio web estático</strong> </div>
+              <div class="mb-2"> <strong>Sitio web estático</strong> </div>
               <div class=""> Se tratan de las páginas webs que solo muestran información permanente tratando de crear un atractivo y enseñando otra salida, ya sea a redes sociales o dar a conocer comercios. <br>
               Estas webs no tienen ningún tipo de base de datos, aplicativos especiales.</div>            
             </div>
           </div>
-        <div class="item">
+        <div class="item col-10 offset-1">
             <div class="text text-white clean">
-              <div class=""> <strong>Sitio web dinámico</strong> </div>
+              <div class="mb-2"> <strong>Sitio web dinámico</strong> </div>
               <div class="">Son las páginas más usadas de la actualidad con funciones avanzadas, importantes e incluso cierre de ventas con sistemas totalmente automatizados. <br>
               Básicamente puedes crear una herramienta por la cual las personas visiten tu página web o puedes tener incluso una tienda que se retroalimenta.</div>            
             </div>
           </div>
-        <div class="item">
+        <div class="item col-10 offset-1">
             <div class="text text-white clean">
-              <div class=""> <strong>E commerce</strong> </div>
+              <div class="mb-2"> <strong>E commerce</strong> </div>
               <div class=""> Básicamente se trata de crear una página web que incluye una tienda donde puedas ver el producto, conocer las tallas, saber la disponibilidad, conocer hacia qué país lo envían e incluso pagar directamente en la plataforma. Lo que hace que los procesos de venta se optimicen y se garantice perfectamente la compra de un producto o servicio.</div>            
             </div>
           </div>
@@ -403,6 +409,16 @@
               <a class="popup portfolio-img" href="images/portfolio/coke.png"><i class="fa fa-arrows-alt"></i></a>
           </div>
         </div>
+        <div class="grid-item photography branding">
+            <div class="portfolio-item">
+             <img src="images/portfolio/datalab.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> dataLab </a> </h4>
+                  <span class="text-dark"> Sitio web estático</span> 
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/datalab.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
       </div>
      </div>
     </div> 
@@ -517,7 +533,7 @@
 
 
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
 
 <!--=================================
  jquery -->
