--- a/service-content.html
+++ b/service-content.html
@@ -130,64 +130,170 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/5.png);">
+<section class="slider-parallax business-banner-06 bg-overlay-black-80 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/29.png);">
+  <div class="slider-content-middle">
+   <div class="container">
+     <div class="row">
+        <div class="col-12">
+         <div class="slider-content">
+          <div class="row">
+            <div class="col-lg-10">
+                <h1 class="text-white text-uppercase">“Al ver buen contenido, los usuarios desean compartirlo”</h1>
+                <p class="text-white">Posicionamos tu marca en el público objetivo compartiendo contenido de valor.</p>
+            </div>
+          </div>
+         </div>
+        </div>
+     </div>
+   </div>
+  </div>
+</section>
+
+<section class="gray-bg d-flex">
+  <div style="width: 104%;">
+      <img src="images/content/drone.jpg" style="width: 100%;">
+  </div>
+  <div class="container">
+    <div class="row ">
+      <div class="col-10 mt-90">
+        <div class="section-title mb-20">
+            <h6>Mejora tu alcance y rendimiento con medios digitales</h6>
+            <h2>Estrategias de Contenidos</h2>
+            <p>Creamos buenas piezas de contenido digital para comunicar de manera efectiva, atraer usuarios e influir en el mercado
+            </p>
+          </div>
+          <p>Textos profesionales, videos animados, presentaciones únicas y diseños creativos para presentar y vender tus productos o servicios. Generamos contenidos digitales que promocionan, impactan y venden.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="gray-bg d-flex">  
+  <div class="container">
+    <div class="row ">
+      <div class="col-12 text-right">
+        <div>
+          <div class="col-md-12 mb-5">
+        <div class="section-title text-center">
+          <span class="h4 text-gray">-------</span>
+          <h1>Algunos de sus beneficios</h1>
+        </div>
+      </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-layers-alt"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Cultiva la imagen de tu marca compartiendo valor.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-mouse"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Atrae potenciales clientes sin perseguirlos.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-hand-open"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Promociona tus productos o servicios de manera efectiva.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-hand-open"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Comparte tus mensajes sin límites a través de medios digitales.</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div style="width: 100%;">
+      <img src="images/content/editing.jpg" style="width: 100%;">
+  </div>
+</section>
+
+
+<section class="key-features white-bg page-section-ptb">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-4 col-md-4">
+            <div class="feature-text round shadow text-center mb-40">
+              <div class="feature-icon">
+              <span class="ti-layers-alt theme-color"></span>
+              </div>
+              <div class="feature-info">
+              <h5 class="text-back pb-10">PRESENTA</h5>
+              <p>Presentamos tus productos o servicios de manera adecuada para vender.</p>
+            </div>
+           </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="feature-text round shadow text-center mb-40">
+              <div class="feature-icon">
+              <span class="ti-image theme-color"></span>
+              </div>
+              <div class="feature-info">
+              <h5 class="text-back pb-10">IMPACTA</h5>
+              <p>Impactamos en el mercado objetivo brindando contenido de valor.</p>
+            </div>
+           </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="feature-text round shadow text-center mb-40">
+              <div class="feature-icon">
+              <span class="ti-heart theme-color"></span>
+              </div>
+              <div class="feature-info">
+              <h5 class="text-back pb-10">ATRAE</h5>
+              <p>Generamos contenido que atrae personas a tu negocio.</p>
+          </div>
+         </div>
+        </div>
+     </div>
+   </div>
+</section>
+
+<section class="page-section-ptb parallax bg-overlay-black-50" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/drone2.jpg);">
   <div class="container">
     <div class="row">
-     <div class="col-lg-12">
-      <div class="text-center">
-          <h3 class="text-white">“Si tu negocio no está en internet, no existe”</h3>
-          <p class="h4 text-muted">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar</p>
-        </div>
-     </div>
-  </div>
- </div>
-</section>
-
-<section class="page-section-ptb">
-  <div class="container">
-     <div class="row">
-      <div class="col-lg-6 sm-mt-30">
-        <div class="section-title mb-20">
-            <h6>Mostrá tu marca en internet de la mejor manera</h6>
-            <h2>Diseño Web</h2>
-            <p>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
-            <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</p>
+      <div class="col-lg-6 col-md-9">
+        <div class="section-title dark-bg">
+            <h2 class="title-effect text-white">Contenidos Digitales</h2>
           </div>
-          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
-          <a class="button mt-20" href="#"> Leer más</a>
+         <div class="row mt-30">
+          <div class="col-md-6">
+            <ul class="list list-unstyled list-hand text-white">
+              <li> Fotografías</li>
+              <li> Producción audiovisual </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list list-unstyled list-hand text-white">
+              <li> Filmaciones con drone</li>
+              <li> Videos animados </li>
+            </ul>
+          </div>
+         </div>
       </div>
-      <div class="col-lg-6">
-         <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
-        </div>
-      </div>
-     </div>
+   </div>
   </div>
 </section>
-
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
-   <div class="container">
-       <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">01<span class="text-black">.</span></h1>
-              <h3 class="text-black">Tenemos tecnología</h3>
-              <p class="text-gray">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">02<span class="text-black">.</span></h1>
-              <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4">
-              <h1 class="text-white">03<span class="text-black">.</span></h1>
-              <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
-         </div>
-      </div>
-  </div>
-</section>
-
 
 <!--=================================
  footer -->
@@ -278,7 +384,7 @@
 
 
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
 
 <!--=================================
  jquery -->
