--- a/service-design.html
+++ b/service-design.html
@@ -130,23 +130,32 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/2.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <div class="text-center">
-          <h3 class="text-white">“Si tu negocio no está en internet, no existe”</h3>
-          <p class="h4 text-muted">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar</p>
+<section class="slider-parallax business-banner-06 bg-overlay-black-80 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/29.png);">
+  <div class="slider-content-middle">
+   <div class="container">
+     <div class="row">
+        <div class="col-12">
+         <div class="slider-content">
+          <div class="row">
+            <div class="col-lg-10">
+                <h1 class="text-white text-uppercase">Una imagen <br> vale mas que mil palabras</h1>
+                <p class="text-white">Gracias al diseño las personas te van a reconocer y no te van a confundir con marcas 'parecidas'.</p>
+            </div>
+          </div>
+         </div>
         </div>
      </div>
+   </div>
   </div>
- </div>
 </section>
 
-<section class="page-section-ptb">
+<section class="gray-bg d-flex">
+  <div style="width: 104%;">
+      <img src="images/design/design.jpg" style="width: 100%;">
+  </div>
   <div class="container">
-     <div class="row">
-      <div class="col-lg-6 sm-mt-30">
+    <div class="row ">
+      <div class="col-10 mt-90">
         <div class="section-title mb-20">
             <h6>Destaca tu marca con estilo e identidad</h6>
             <h2>Diseño Gráfico</h2>
@@ -156,35 +165,136 @@
           <p>Diseñamos en distintos formatos para construir los mensajes de tu marca o negocio y su presencia en medios digitales.</p>
           <p>Nuestros diseños son innovadores y generan impacto.</p>
       </div>
-      <div class="col-lg-6 sm-mt-50">
-        <img class="img-fluid mx-auto" src="images/design/design.jpg" alt="">
-     </div>
-     </div>
+    </div>
   </div>
 </section>
 
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
-   <div class="container">
-       <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">01<span class="text-black">.</span></h1>
-              <h3 class="text-black">Tenemos tecnología</h3>
-              <p class="text-gray">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
+<section class="gray-bg d-flex">  
+  <div class="container">
+    <div class="row ">
+      <div class="col-12 mt-90 text-right">
+        <div>
+          <div class="col-md-12 mb-5">
+        <div class="section-title text-center">
+          <span class="h4 text-gray">-------</span>
+          <h1>Algunos de sus beneficios</h1>
+        </div>
+      </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-layers-alt"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Genera interés en tus mensajes con diseños atractivos</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-mouse"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Comunica mejor utilizando elementos visuales</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-10 offset-1 mt-50">
+            <div class="feature-text left-icon">
+              <div class="feature-icon theme-color">
+                <span class="ti-hand-open"></span>
+              </div>
+              <div class="feature-info">
+                <h5 class="text-back pt-15 ml-3">Destaca tu marca del resto con su propia identidad</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div style="width: 100%;">
+      <img src="images/design/design.jpg" style="width: 100%;">
+  </div>
+</section>
+
+
+<section class="key-features white-bg page-section-ptb">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-4 col-md-4">
+            <div class="feature-text round shadow text-center mb-40">
+              <div class="feature-icon">
+              <span class="ti-layers-alt theme-color"></span>
+              </div>
+              <div class="feature-info">
+              <h5 class="text-back pb-10">ÚNICO</h5>
+              <p>Destacamos negocios o marcas con identidad, presencia y diseños únicos.</p>
+            </div>
+           </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="feature-text round shadow text-center mb-40">
+              <div class="feature-icon">
+              <span class="ti-image theme-color"></span>
+              </div>
+              <div class="feature-info">
+              <h5 class="text-back pb-10">ATRACTIVO</h5>
+              <p>Atraemos personas con diseños que impactan.</p>
+            </div>
+           </div>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <div class="feature-text round shadow text-center mb-40">
+              <div class="feature-icon">
+              <span class="ti-heart theme-color"></span>
+              </div>
+              <div class="feature-info">
+              <h5 class="text-back pb-10">INNOVADOR</h5>
+              <p>Construimos el mensaje adecuado para que tu marca impacte de manera innovadora.</p>
+          </div>
          </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">02<span class="text-black">.</span></h1>
-              <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4">
-              <h1 class="text-white">03<span class="text-black">.</span></h1>
-              <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
+        </div>
+     </div>
+   </div>
+</section>
+
+<section class="page-section-ptb parallax" data-jarallax='{"speed": 0.6}' style="background: url(images/bg/macbook.jpg);">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-9">
+        <div class="section-title dark-bg">
+            <h2 class="title-effect text-white">Subservicios de Diseño Gráfico</h2>
+          </div>
+         <div class="row mt-30">
+          <div class="col-md-6">
+            <ul class="list list-unstyled list-hand text-white">
+              <li> Identidad</li>
+              <li> Presentaciones </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list list-unstyled list-hand text-white">
+              <li> Packaging</li>
+              <li> Papelería </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list list-unstyled list-hand text-white">
+              <li> Infografías</li>              
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list list-unstyled list-hand text-white">
+              <li> Ilustración </li>
+            </ul>
+          </div>
          </div>
       </div>
+   </div>
   </div>
 </section>
-
 
 <!--=================================
  footer -->
@@ -275,7 +385,7 @@
 
 
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
 
 <!--=================================
  jquery -->
