--- a/service-marketing.html
+++ b/service-marketing.html
@@ -130,64 +130,161 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/3.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <div class="text-center">
-          <h3 class="text-white">“Con información adecuada puedes anticiparte a los cambios”</h3>
-          <p class="h4 text-muted">La recopilación, análisis y segmentación de datos te permiten enfocarte en lo importante</p>
+<section class="slider-parallax business-banner-06 bg-overlay-black-80 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/29.png);">
+  <div class="slider-content-middle">
+   <div class="container">
+     <div class="row">
+        <div class="col-12">
+         <div class="slider-content">
+          <div class="row">
+            <div class="col-lg-10">
+                <h1 class="text-white text-uppercase">“Con información adecuada puedes anticiparte a los cambios”</h1>
+                <p class="text-white">La recopilación, análisis y segmentación de datos te permiten enfocarte en lo importante.</p>
+            </div>
+          </div>
+         </div>
         </div>
      </div>
+   </div>
   </div>
+</section>
+
+<section id="raindrops" class="raindrops" style="height: 50px; margin-top: -3%;"></section>
+
+<section class="page-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <h1>Impulsa tu negocio con presencia e identidad digital</h1>
+          </div>
+       </div>
+    </div>
+    
+  </div>
+</section>
+
+
+<section class="page-section-pt bg-overlay-theme-900 parallax" style="background-image: url(images/bg/17.jpg);">
+ <div class="container">
+    <div class="row justify-content-center">
+       <div class="col-md-9">
+        <div class="play-video-section text-center mtn-10" style="">
+           <div class="content">
+              <h4 class="text-dark mb-20">Estudiamos el contexto de tu marca para posicionarla en el mercado objetivo y detectar tendencias entre los consumidores</h4>
+              <p class="mb-50">Analizamos, generamos datos y estadísticas para enfocarnos en lo importante, su presencia y alcance en medios digitales. Diseñamos estrategias para atraer al público que buscas.</p>
+              <img class="img-fluid mx-auto" src="images/marketing/laptop.png" alt="">
+           </div>
+         </div>
+       </div>
+    </div>
  </div>
+</section>
+
+<section class="gray-bg page-section-ptb" style="padding: 60px 0;">
+   <div class="container">
+       <div class="row">
+        <div class="col-lg-12 col-md-12 mb-5">
+          <div class="section-title text-center">
+            <span class="h4 text-gray">Aprovechá la presencia web</span>
+            <h1 class="text-dark">Algunos de sus beneficios</h1>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+             <h1 class="text-black">01<span class="text-black">.</span></h1>
+             <h5 class="text-black">Aumentá el alcance de tu negocio apareciendo en búsquedas de google, facebook, instagram, twitter y cualquier otro medio digital.</h5>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+             <h1 class="text-black">02<span class="text-black">.</span></h1>
+             <h5 class="text-black">Cultivá la imagen de tu marca comunicando de manera directa y efectiva.</h5>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4">
+             <h1 class="text-black">03<span class="text-black">.</span></h1>
+             <h5 class="text-black">Recibe feedback, consejos, opiniones, sugerencias, etc de tus clientes.</h5>
+        </div>
+      </div>
+  </div>
 </section>
 
 <section class="page-section-ptb">
   <div class="container">
-     <div class="row">
-      <div class="col-lg-6 sm-mt-30">
-        <div class="section-title mb-20">
-            <h6>Mostrá tu marca en internet de la mejor manera</h6>
-            <h2>Diseño Web</h2>
-            <p>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
-            <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</p>
-          </div>
-          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
-          <a class="button mt-20" href="#"> Leer más</a>
+     <div class="row no-gutters">
+      <div class="col-lg-4 col-md-6">
+       <div class="feature-text left-icon">
+         <div class="position-relative clearfix">
+          <div class="feature-icon">
+            <span class="fa fa-bullhorn"></span>
+         </div>
+       </div>
+        <div class="feature-info">
+          <h5 class="text-back">Estrategias Eficientes </h5>
+          <p class="mb-0">Enfocados en tu público objetivo, nos concentramos en promocionar tu negocio y transmitir el valor de lo que ofrece.</p>
+        </div>
       </div>
-      <div class="col-lg-6">
-         <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
+     </div>
+     <div class="col-lg-4 col-md-6">
+        <div class="feature-text left-icon">
+         <div class="position-relative clearfix">
+          <div class="feature-icon">
+            <span class="fa fa-bar-chart"></span>
+         </div>
+       </div>
+        <div class="feature-info">
+          <h5 class="text-back">Branding</h5>
+          <p class="mb-0">Cultivamos la identidad y presencia digital transmitiendo los valores de cada marca. </p>
+        </div>
+      </div>
+     </div>
+     <div class="col-lg-4 col-md-6">
+        <div class="feature-text left-icon">
+         <div class="position-relative clearfix">
+          <div class="feature-icon">
+            <span class="fa fa-file-code-o"></span>
+         </div>
+       </div>
+        <div class="feature-info">
+          <h5 class="text-back">Comunicación Efectiva</h5>
+          <p class="mb-0">Construimos el mensaje adecuado para que tu marca impacte en el público objetivo.</p>
         </div>
       </div>
      </div>
   </div>
 </section>
 
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
-   <div class="container">
-       <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">01<span class="text-black">.</span></h1>
-              <h3 class="text-black">Tenemos tecnología</h3>
-              <p class="text-gray">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">02<span class="text-black">.</span></h1>
-              <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4">
-              <h1 class="text-white">03<span class="text-black">.</span></h1>
-              <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
-         </div>
-      </div>
+<section class="service gray-bg page-section-ptb">
+  <div class="container">
+    <!-- ============================================ -->
+   <div class="service-3">
+    <div class="row">
+       <div class="col-lg-6 col-md-6">
+        <div class="col-lg-12 col-md-12">
+          <div class="section-title text-right">
+            <span class="h4 text-gray">Aprovechá la presencia en las redes</span>
+            <h1 class="text-dark">Sobre el marketing</h1>
+          </div>
+        </div>
+          <div class="service-blog text-right">
+              <ul class="list list-unstyled">
+                <li>Inbound Marketing </li>
+              </ul>
+              <ul class="list list-unstyled">
+                <li>Marketing de contenido </li>
+              </ul>
+              <ul class="list list-unstyled">
+                <li>Estratégias publicitarias</li>
+              </ul>
+              <ul class="list list-unstyled">
+                <li>SEO </li>
+              </ul>
+          </div>
+       </div>
+       <div class="col-lg-6 col-md-6 xs-mt-30 xs-mb-30">
+         <img class="img-fluid full-width" src="images/about/01.jpg" alt="">
+       </div>
+    </div>
+  </div>
   </div>
 </section>
-
 
 <!--=================================
  footer -->
@@ -246,7 +343,7 @@
 
 
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
 
 <!--=================================
  jquery -->
