--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   </li>
                   <li><a href="news.html">Noticias </a>
                   </li>
-                  <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
+                  <li><a href="blog.html" disabled> Tips & Consejos </a>
                   </li>
                   
                 </ul>
@@ -182,7 +182,7 @@
   </div>
 </div>
 
-<section class="page-section-pt">
+<section class="page-section-pt2 o-hidden">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
@@ -194,7 +194,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-sm-6 sm-mb-30">
-        <div class="text-center">
+        <div class="text-center rollIn wow">
           <i class="ti-desktop display-4 text-gray"></i>
           <h3 class="d-block mt-30 mb-20"><a href="">Desarrollo web</a> </h3>
           <p class="mb-30">Plataformas E-commerce, página Web Estática/Dinámica, analítica Web, posicionamiento SEO, campañas por Google Ads, mantenimiento Mensual de página web, etc.</p>
@@ -202,7 +202,7 @@
         </div>
        </div>
        <div class="col-lg-4 col-sm-6 sm-mb-30">
-        <div class="text-center">
+        <div class="text-center bounceIn wow">
           <i class="ti-headphone display-4 text-gray"></i>
           <h3 class="d-block mt-30 mb-20"><a href="">Diseño gráfico </a></h3>
           <p class="mb-30">Identidad de marca, etiquetas, tarjetas, logotipos, folletos, catálogos, brochure, bolsas, papelería, cartas para bar/restaurant, digitalización de imágenes, etc.</p>
@@ -210,7 +210,7 @@
         </div>
        </div>
        <div class="col-lg-4 col-sm-6">
-        <div class="text-center">
+        <div class="text-center bounceInDown wow">
           <i class="ti-panel display-4 text-gray"></i>
           <h3 class="d-block mt-30 mb-20"><a href="">Marketing digital</a></h3>
           <p class="mb-30">Diseñamos y aplicamos estrategias de marketing llevadas a cabo en medios digitales.</p>
@@ -218,7 +218,7 @@
         </div>
        </div>
        <div class="col-lg-4 col-sm-6">
-        <div class="text-center">
+        <div class="text-center fadeIn wow">
           <i class="ti-shield display-4 text-gray"></i>
           <h3 class="d-block mt-30 mb-20"><a href="">Generación de contenidos</a></h3>
           <p class="mb-30">Investigación, planificacion y desarrollo de productos, análisis analítico, estrategia de contenido, estrategia de campaña.</p>
@@ -226,7 +226,7 @@
         </div>
        </div>
       <div class="col-lg-4 col-sm-6">
-        <div class="text-center">
+        <div class="text-center fadeInLeft wow">
           <i class="ti-shield display-4 text-gray"></i>
           <h3 class="d-block mt-30 mb-20"><a href="">Gestión de proyectos</a></h3>
           <p class="mb-30">------------</p>
@@ -234,7 +234,7 @@
         </div>
        </div>
        <div class="col-lg-4 col-sm-6">
-        <div class="text-center">
+        <div class="text-center fadeInRight wow">
           <i class="ti-shield display-4 text-gray"></i>
           <h3 class="d-block mt-30 mb-20"><a href="">Asesoría</a></h3>
           <p class="mb-30">------------</p>
@@ -246,12 +246,12 @@
   </div>
 </section>
 
-<section class="action-box black-bg full-width">
+<section class="action-box gray-bg full-width">
   <div class="container">
     <div class="row">
      <div class="col-lg-12 col-md-12">
        <div class="action-box-text">
-        <h3 id="lcd-title"><strong> LA COMPAÑíA DIGITAL</strong></h3>
+        <h3 class="lcd-title2"><strong> LA COMPAÑíA DIGITAL</strong></h3>
         <p class="lcd-p">Aprovechá el potencial de tu empresa utilizando tecnología</p>
       </div>
       <div class="action-box-button">
@@ -289,7 +289,7 @@
          <div class="portfolio-item">
              <img src="images/portfolio/colombres-garmendia.png" alt="">
                <div class="portfolio-overlay">
-                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> Colombres Garmendia & Asociados </a> </h4>
+                  <h4 class="text-dark"> <a href="portfolio-single-01.html"> Colombres Garmendia </a> </h4>
                   <span class="text-dark"> Sitio web dinámico</span> 
                 </div>
               <a class="popup portfolio-img" href="images/portfolio/colombres-garmendia.png"><i class="fa fa-arrows-alt"></i></a>
@@ -343,7 +343,7 @@
 <!--=================================
  footer -->
 
-<footer class="footer page-section-pt black-bg">
+<footer class="footer page-section-pt2 black-bg">
  <div class="container">
   <div class="row">
     <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
@@ -362,13 +362,12 @@
     </div>
     <div class="col-lg-2 col-md-3 col-sm-6 sm-mb-30">
       <div class="footer-useful-link footer-hedding">
-        <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
+        <h6 class="text-white mb-30 mt-10 text-uppercase">Nosotros</h6>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Servicios</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <!-- <li><a href="#">Oportunidades</a></li> -->
+          <li><a href="about.html">Servicios</a></li>
+          <li><a href="about.html">Portfolio</a></li>
+          <li><a href="opportunities.html">Oportunidades</a></li>
         </ul>
       </div>
     </div>
@@ -376,11 +375,9 @@
       <div class="footer-useful-link footer-hedding">
         <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Servicios</a></li>
-          <li><a href="about.html">Nosotros</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <!-- <li><a href="#">Oportunidades</a></li> -->
+          <li><a href="about.html">Tips & consejos</a></li>
+          <li><a href="faqs.html">Preguntas frecuentes</a></li>
         </ul>
       </div>
     </div>
@@ -406,14 +403,13 @@
   <div class="footer-widget mt-20">
     <div class="row">
       <div class="col-lg-6 col-md-6">
-        <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#"> LA COMPAÑIA DIGITAL </a> All Rights Reserved </p>
+        <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="http://www.lacompaniadigital.com" target="_blank"> LA COMPAÑIA DIGITAL </a> All Rights Reserved </p>
       </div>
       <div class="col-lg-6 col-md-6 ">
         <div class="footer-social mt-10">
           <ul class="text-left text-md-right">
-             <li class="list-inline-item"><a href="#">Terms &amp; Conditions </a> &nbsp;&nbsp;&nbsp;|</li>
-             <li class="list-inline-item"><a href="#">API Use Policy </a> &nbsp;&nbsp;&nbsp;|</li>
-             <li class="list-inline-item"><a href="#">Privacy Policy </a> </li>
+             <li class="list-inline-item"><a href="#">Contacto </a> &nbsp;&nbsp;&nbsp;|</li>
+             <li class="list-inline-item"><a href="#">Privacidad </a> </li>
           </ul>
           </div>
       </div>
